--- a/theme_light.scss
+++ b/theme_light.scss
@@ -1,3 +1,6 @@
 /*-- scss:defaults --*/
 // Base document colors
+$body-bg: white;
+$body-color: black;
 $link-color: #3880F2;
+$toc-color: #428F72;
